--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nafeij.github.io/the-banner-saga-web-map",
+  "homepage": "https://github.com/Nafeij/the-banner-saga-web-map#readme",
   "name": "bswm",
   "version": "0.1.0",
   "private": true,
@@ -53,7 +53,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-	"deploy" : "npm run build&&gh-pages -d build"
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -107,6 +107,5 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Nafeij/the-banner-saga-web-map/issues"
-  },
-  "homepage": "https://github.com/Nafeij/the-banner-saga-web-map#readme"
+  }
 }
